# envsniff

./: .gitignore  .mcp.json  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_plugin.md
.github/examples/: envsniff.yml
.github/workflows/: ci.yml  publish.yml
assets/: preview-patrick-banner.py  preview_banner.py
npx-wrapper/: README.md  package.json
src/envsniff/: __init__.py  config.py  errors.py  models.py
src/envsniff/cli/: formatters.py  main.py  welcome.py
src/envsniff/describer/: __init__.py  ai.py  cache.py  fallback.py  types.py
src/envsniff/env_example/: __init__.py  merger.py  parser.py  writer.py
src/envsniff/hooks/: ci.py  precommit.py
src/envsniff/scanner/: engine.py  file_walker.py  registry.py  type_inferrer.py
src/envsniff/scanner/plugins/: base.py  docker.py  golang.py  javascript.py  python.py  shell.py
tests/: conftest.py
tests/e2e/: test_cli_check.py  test_cli_generate.py  test_cli_scan.py  test_precommit_hook.py
tests/fixtures/: Dockerfile_sample  go_sample.go  javascript_sample.js  python_sample.py  sample_gitignore  shell_sample.sh
tests/fixtures/env_example_samples/: simple.env.example  with_comments.env.example  with_sections.env.example
tests/integration/: test_ai_describer.py  test_scan_pipeline.py
tests/unit/: test_ci_workflow.py  test_config.py  test_errors.py  test_models.py  test_type_inferrer.py
tests/unit/cli/: test_formatters.py
tests/unit/describer/: test_cache.py  test_fallback.py  test_types.py
tests/unit/env_example/: test_merger.py  test_parser.py  test_writer.py
tests/unit/hooks/: test_ci.py  test_npm_wrapper.py  test_precommit.py  test_precommit_yaml.py
tests/unit/scanner/: test_docker_plugin.py  test_file_walker.py  test_go_plugin.py  test_javascript_plugin.py  test_python_plugin.py  test_shell_plugin.py
