[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "envsniff"
version = "0.1.0"
description = "Scan codebases for environment variables, detect undocumented vars, and generate .env.example files"
readme = "README.md"
license = "MIT"
authors = ["envsniff contributors"]
keywords = ["environment", "dotenv", "cli", "scanner", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
packages = [{ include = "envsniff", from = "src" }]

[tool.poetry.urls]
Homepage = "https://github.com/envsniff/envsniff"
Repository = "https://github.com/envsniff/envsniff"
"Bug Tracker" = "https://github.com/envsniff/envsniff/issues"

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=8.1"
tree-sitter = ">=0.22,<1.0"
tree-sitter-python = ">=0.22"
tree-sitter-javascript = ">=0.22"
tree-sitter-go = ">=0.22"
pathspec = ">=0.12"
rich = ">=13.0"
anthropic = ">=0.40"
openai = ">=1.0"
google-genai = ">=1.0"
ollama = ">=0.3"
questionary = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
anthropic = ">=0.40"

[tool.poetry.scripts]
envsniff = "envsniff.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=envsniff --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/envsniff"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["envsniff"]
